# swver-snd-assignment

./: .gitignore  CHANGELOG.md  LICENSE  README.md  abstract-interpreter.cabal  run_all.sh  swver-snd-assignment.cabal
abstract-domains/AbstractDomains/: Extra.hs  Interval.hs
app/: AI.hs  BoundedInterval.hs  BoundedIntervalAnalysis.hs  InfiniteIntegers.hs  Interval.hs  Main.hs
assets/: orale.whl  orale.whl.inv  prog1.whl  prog1.whl.inv  prog2.whl  prog2.whl.inv  prog3.whl  prog3.whl.inv  prog4.whl  prog4.whl.inv  prog5.whl  prog5.whl.inv  prog6.whl  prog6.whl.inv  prog7.whl  prog7.whl.inv  prog8.whl  prog8.whl.inv  prog9.whl  prog9.whl.inv
doc/: report.tex
doc/src/: abstract-interpreter.tex  generics.tex  implementation.tex  language.tex  performing-analysis.tex
lib/abstract-domains/src/AbstractDomains/: BoundedInterval.hs  Extra.hs  InfiniteIntegers.hs  Interval.hs
lib/abstract-domains/test/: Tests.hs
lib/interval-analysis/src/: AbstractInterpreter.hs  BoundedIntervalAnalysis.hs  Invariant.hs
lib/interval-analysis/test/: Tests.hs
lib/while-lang/src/While/: Language.hs  Parser.hs
lib/while-lang/test/Tests/: StmtTests.hs
while-lang-tests/: Tests.hs
while-lang-tests/Tests/: AExpTests.hs  BExpTests.hs  Common.hs  StmtTests.hs
while-lang/While/: Language.hs  Parser.hs
