cabal-version:      2.4
name:               abstract-interpreter
version:            0.1.0.0
synopsis:           An abstract interpreter for the While lang

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Christian Micheletti
maintainer:         christian.micheletti@studenti.unipd.it

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library while-lang
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   while-lang
    default-language: Haskell2010

executable abstract-interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        while-lang

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite abstract-interpreter-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0,
                      while-lang
