cabal-version:      2.4
name:               abstract-interpreter
version:            0.1.0.0
synopsis:           An abstract interpreter for the While lang

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Christian Micheletti
maintainer:         christian.micheletti@studenti.unipd.it

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

common shared-props
    ghc-options: -W

library while-lang
    exposed-modules:  While.Language
                      While.Parser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base        ^>=4.17.2.0,
                      megaparsec  ^>=9.5.0,
                      text        ^>=2,
                      extra       ^>=1.7.14,
                      monad-loops ^>=0.4.3
    hs-source-dirs:   lib/while-lang/src
    default-language: Haskell2010

    default-extensions: OverloadedStrings

library abstract-domains
    exposed-modules:    AbstractDomains.Extra
                        AbstractDomains.InfiniteIntegers
                        AbstractDomains.Interval
                        AbstractDomains.BoundedInterval
    
    build-depends:      base            ^>=4.17.2.0,
                        reflection      ^>=2.1.7,
                        lattices        ^>=2.2

    hs-source-dirs:     lib/abstract-domains/src
    default-language:   Haskell2010

    default-extensions: UndecidableInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeOperators,
                        ScopedTypeVariables

library interval-analysis
    import:             shared-props
    exposed-modules:    AbstractInterpreter
                        BoundedIntervalAnalysis
                        Invariant

    build-depends:      base            ^>=4.17.2.0,
                        reflection      ^>=2.1.7,
                        lattices        ^>=2.2,
                        unordered-containers    ^>=0.2.19.1,
                        while-lang,
                        abstract-domains

    hs-source-dirs:     lib/interval-analysis/src
    
    default-language:   Haskell2010

    default-extensions: TypeOperators,
                        InstanceSigs,
                        ScopedTypeVariables,
                        FlexibleContexts,
                        MonoLocalBinds

executable ai
    import:             shared-props
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- default-extensions: 


    build-depends:      base                    ^>=4.17.2.0,
                        unordered-containers    ^>=0.2.19.1,
                        reflection              ^>=2.1.7,
                        abstract-domains,
                        while-lang,
                        interval-analysis

    hs-source-dirs:     app
    default-language:   Haskell2010

test-suite while-lang-tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   lib/while-lang/test
    main-is:          Tests.hs
    other-modules:    Tests.Common
                      Tests.AExpTests
                      Tests.BExpTests
                      Tests.StmtTests
    build-depends:    base ^>=4.17.2.0,
                      HUnit ^>=1.6.2.0,
                      while-lang

test-suite abstract-domains-tests
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     lib/abstract-domains/test
    main-is:            Tests.hs
    -- other-modules:
    build-depends:      base ^>=4.17.2.0,
                        HUnit ^>=1.6.2.0,
                        reflection ^>=2.1.7,
                        abstract-domains

test-suite interval-analysis-tests
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     lib/interval-analysis/test
    main-is:            Tests.hs
    -- other-modules:
    build-depends:      base ^>=4.17.2.0,
                        HUnit ^>=1.6.2.0, 
                        lattices                ^>=2.2,
                        unordered-containers    ^>=0.2.19.1,
                        reflection              ^>=2.1.7,
                        abstract-domains,
                        while-lang,
                        interval-analysis